# convmmp

./: README.md  setup.cfg
example/: example_data.npz  simple example.ipynb  spike example.ipynb
src/mpcsc/: __init__.py  core.py
