[metadata]
name = mpcsc
version = 0.1
author = Charles Truong
maintainer = Charles Truong
description = ""
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
include_package_data = True
python_requires = >= 3.6
install_requires =
    joblib
    numba
    numpy<=2.0
    scipy
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

 